j--/tests/pass/XorAssign.java
package pass;

public class XorAssign {
	public int eval(int a, int b) {
		a ^= b;
		return a;
	}
}
