j--/tests/fail/XorAssign.java
package fail;

public class XorAssign {

	public static void main(String args[]) {
		System.out.println("c" %= "b");
	}

}
